tempfile/derive_more/tests/compile_fail/from/multiple_enum_attributes.rs
#[derive(derive_more::From)]
enum Foo {
    #[from(i32)]
    #[from(forward)]
    Bar(i32),
}

fn main() {}
